<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addchild.AddChildActivity">

    <TextView
        android:id="@+id/Tv_input_name_child"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/input_child"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Ti_name_child"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/Tv_input_name_child"
        app:layout_constraintStart_toStartOf="@+id/Tv_input_name_child"
        app:layout_constraintTop_toBottomOf="@+id/Tv_input_name_child">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Et_name_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Tv_date_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@+id/Ti_name_child"
        app:layout_constraintTop_toBottomOf="@+id/Ti_name_child" />

    <EditText
        android:id="@+id/Et_date_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:ems="17"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="none"
        android:onClick="showDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_date_child" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="@+id/Et_date_child"
        app:layout_constraintTop_toBottomOf="@+id/Et_date_child" />

    <RadioGroup
        android:id="@+id/Rg_gender_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginTop="12dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/RbMan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/RbWomen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/women"
            android:layout_weight="1"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rg_gender_child" />

</androidx.constraintlayout.widget.ConstraintLayout>