<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addreport.AddReportActivity">

    <TextView
        android:id="@+id/Tv_date_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="300dp"
        android:text="@string/date_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Et_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/Tv_date_report"
        app:layout_constraintTop_toBottomOf="@+id/Tv_date_report" />

    <TextView
        android:id="@+id/Tv_berat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="@+id/Et_report"
        app:layout_constraintTop_toBottomOf="@+id/Et_report" />

    <EditText
        android:id="@+id/Et_berat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/Tv_berat"
        app:layout_constraintTop_toBottomOf="@+id/Tv_berat" />

    <TextView
        android:id="@+id/Tv_tinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/height"
        app:layout_constraintStart_toStartOf="@+id/Et_berat"
        app:layout_constraintTop_toBottomOf="@+id/Et_berat" />

    <EditText
        android:id="@+id/Et_tinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/Tv_tinggi"
        app:layout_constraintTop_toBottomOf="@+id/Tv_tinggi" />

    <TextView
        android:id="@+id/Tv_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Et_berat"
        app:layout_constraintTop_toTopOf="@+id/Et_berat" />

    <TextView
        android:id="@+id/Tv_cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/cm"
        app:layout_constraintEnd_toEndOf="@+id/Tv_kg"
        app:layout_constraintStart_toStartOf="@+id/Tv_kg"
        app:layout_constraintTop_toBottomOf="@+id/Tv_kg" />

    <Button
        android:id="@+id/btn_add_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_tinggi" />
</androidx.constraintlayout.widget.ConstraintLayout>